force-app/main/default/objects/Additional_Partcipant__c/Additional_Partcipant__c.object-meta.xml
<CustomObject>
    <label>Additional Partcipant</label>
    <nameField>
        <displayFormat>ADP-{00000}</displayFormat>
        <label>Additional Partcipant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Partcipants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>