force-app/main/default/objects/Additional_Partcipant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Additional Partcipants</relationshipLabel>
    <relationshipName>Additional_Partcipants</relationshipName>
    <type>Lookup</type>
</CustomField>