force-app/main/default/objects/Additional_Partcipant__c/fields/Document_Uploaded_for_Full__c.field-meta.xml
<CustomField>
    <fullName>Document_Uploaded_for_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Uploaded for Full</label>
    <type>Checkbox</type>
</CustomField>