force-app/main/default/objects/Additional_Partcipant__c/fields/DocumentUploaded__c.field-meta.xml
<CustomField>
    <fullName>DocumentUploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Uploaded</label>
    <type>Checkbox</type>
</CustomField>