force-app/main/default/objects/Additional_Partcipant__c/fields/Invitation_Link__c.field-meta.xml
<CustomField>
    <fullName>Invitation_link__c</fullName>
    <label>Invitation link</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>