force-app/main/default/objects/Additional_Partcipant__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Additional Partcipants</relationshipLabel>
    <relationshipName>Additional_Partcipants</relationshipName>
    <type>Lookup</type>
</CustomField>