force-app/main/default/objects/Additional_Partcipant__c/fields/Referee_Added_For_Full__c.field-meta.xml
<CustomField>
    <fullName>Referee_Added_For_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referee Added For Full</label>
    <type>Checkbox</type>
</CustomField>