force-app/main/default/objects/Additional_Partcipant__c/fields/What_guidance_from_chosen_mentor__c.field-meta.xml
<CustomField>
    <fullName>What_guidance_from_chosen_mentor__c</fullName>
    <description>What guidance do you expect to receive from your chosen mentor? How will this benefit your proposed research?</description>
    <inlineHelpText>What guidance do you expect to receive from your chosen mentor? How will this benefit your proposed research?</inlineHelpText>
    <label>What guidance from chosen mentor?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>